<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">BreathingInstructorBalloon</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="desc">Feeling the crave?\n\nLets try deep controlled breathing!\n\nThis exercise will help you fight the crave to smoke through relaxation.\n\n</string>
    <string name="instr1">Kill the crave for smoke with <b>deep breathing</b>! </string>
    <string name="instr2">Aim for <b>low Breaths Per Minute (BPM)</b>. 3-5 BPM is very good.</string>
    <string name="instr3"><b>Straighten</b> your back and use your <b>diaphragm</b> to breathe.</string>
    <string name="instr4">Inhale through your nose and exhale through your mouth.</string>
    <string name="instr5">Bring your mouth <b>close to the microphone</b> when breathing (within 10cm).</string>
    <string-array name="duration_array">
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute (Recommended)</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
    </string-array>
    <string-array name="BPM_array">
        <item>10 BPM</item>
        <item>9 BPM</item>
        <item>8 BPM</item>
        <item>7 BPM</item>
        <item>6 BPM</item>
        <item>5 BPM</item>
        <item>4 BPM</item>
        <item>3 BPM</item>
    </string-array>
</resources>
