<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue1" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:layout_marginTop="17dp"
        android:text="Instructions"
        android:textSize="32sp" />
    
    <TextView
        android:id="@+id/tip1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/title"
        android:text="@string/instr1"
        android:textSize="16dp" />
    
    <TextView
        android:id="@+id/tip2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/tip1"
        android:text="@string/instr2"
        android:textSize="16dp" />
    
    <TextView
        android:id="@+id/tip3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/tip2"
        android:text="@string/instr3"
        android:textSize="16dp" />
    
    <TextView
        android:id="@+id/tip4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/tip3"
        android:text="@string/instr4"
        android:textSize="16dp" />
    
    <TextView
        android:id="@+id/tip5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@+id/tip4"
        android:text="@string/instr5"
        android:textSize="16dp" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonbg"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:text="Back" />

</RelativeLayout>
